# trading-system

./: .env  .env.example  .example.env  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  debug_streamlit.py  docker-compose.yml  docker-entrypoint.sh  mypy.ini  pyproject.toml  requirements.txt  run_strategy.py  setup.sh  ui_streamlit.py  update_historical_data.py
.github/workflows/: ci.yml
Rebuild Plan/: Trading System Rebuild Guidance.md
backend/: Dockerfile  README.md  __init__.py  diagnose.py  diagnose_optimization.py  main.py  requirements.txt  start.sh  trading_system.db
backtesting/: backtester.py  portfolio_backtester.py
config/: Credentials.json  settings.py  strategies.yaml
core/: __init__.py  interfaces.py
db/: __init__.py
frontend/: Dockerfile  README.md  api_client.py  app.py  next.config.ts  package-lock.json  package.json  requirements.txt  start.sh
indicators/: technicals.py
ingestion/: alpha_vantage_client.py  cache.py  fmp_client.py  yahoo_finance_client.py
models/: __init__.py
repository/: fundamentals_repository.py  prices_repository.py
research/: README.md
scripts/: build_kaggle_price_db.py  diagnose_optimization.py
services/: __init__.py
strategy/: macd_crossover.py  moving_average_crossover.py  rsi_mean_reversion.py  trade_management.py
strategy_lab/: __init__.py  config.py
tests/: conftest.py  test_core_contracts_pr01.py  test_data_validation.py  test_data_validation_extra.py  test_indicators.py  test_legacy_backtester_delegation.py  test_prices_repository_datetime_normalization.py  test_risk_engine_v2.py  test_services.py
trading_backtester/: backtester.py  portfolio_backtester.py  strategy_lab_adapter.py
trading_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
utils/: data_validation.py
(+182 files in other folders)
